# ClearApp

./: .gitignore  Cargo.toml  build.rs  config.json  dist.toml  release_build.py  rustfmt.toml  tunnel_config.json
.github/workflows/: release.yml  tag-from-cargo.yml
cfg/: learn.slint  tunnel_config.json
src/: _0.6_ TableView SSH.md  config.rs  logger.rs  main.rs  tray_manager.md  tray_manager.rs  tunnel.rs  ui.rs
src/config/: app_config.rs  mod.rs
src/domain/: mod.rs
src/model/: mod.rs
src/services/: cleaner.rs  logger.rs  logging.rs  mod.rs
src/ui/: Slint_UI.slint  app.slint  build.rs  build_ui.rs  classic_window.slint  main_window.slint  mod.rs
ui/: app.slint
