#Cargo.toml
[package]
name = "ClearApp"
version = "0.0.2"
edition = "2024"
description = "Clear folder GUI"
license = "MIT"
repository = "https://github.com/ConstD32/ClearApp"

[dependencies]
slint = { version = "1.15", features = ["backend-winit", "renderer-skia"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }

[build-dependencies]
slint-build = "1.15"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true